--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,12 +3,15 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>Transliteratr</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="styles/transliterator.css">
     </head>
     <body>
-      <!-- body goes here -->
+      <%= yield %>
+
+      <script type="text/javascript" src="/js/jquery.min.js"></script>
+      <script type="text/javascript" src="/js/business-logic.js"></script>
     </body>
 </html>
