--- a/views/painter.erb
+++ b/views/painter.erb
@@ -1,7 +1,7 @@
-<form method="post" action="/translated">
+<!-- <form method="post" action="/translated">
   <input type="text" name="uncolored_text">
 </form>
-
+ -->
 <% if !@uncolored_text.empty? %>
   <div class="cf frame">
     <% @uncolored_text.each do |letter| %>
@@ -9,4 +9,3 @@
     <% end %>
   </div>
 <% end %>
-<div></div>
