--- a/views/painter.erb
+++ b/views/painter.erb
@@ -8,4 +8,7 @@
       <span class="cell" style="background: <%= @colors[letter] %>"></span>
     <% end %>
   </div>
+  <div class="quote">
+    <h2><%= @original_text %></h2>
+  </div>
 <% end %>
