--- a/views/login.erb
+++ b/views/login.erb
@@ -2,12 +2,12 @@
   <div class="logo"></div>
   <div class="main">
     <h1 class="title">transliteratr.</h1>
-    <form class="signup" method="post" action="/signup">
+    <form class="signup" method="post" action="/login">
       <div class="inputs">
         <input type="text" name="username" placeholder="Username" >
         <input type="password" name="password" placeholder="Password" >
       </div>
-      <input type="submit" name="submit" value="Color Me In!">
+      <input type="submit" name="submit" value="Welcome Back!">
     </form>
   </div>
   <script type="text/javascript" src="/js/jquery.min.js"></script>
