--- a/views/paint_control.erb
+++ b/views/paint_control.erb
@@ -24,6 +24,14 @@
             <option name="circle" value="circle">Circle</option>
             <option name="triangle" value="triangle">Triangle</option>
           </select>
+          <select name="size">
+            <option name="small" value="small">Small</option>
+            <option name="medium" value="medium">Medium</option>
+          </select>
+          <span class="checkbox"><input type="checkbox" name="magical" value="magical"> Magical</span>
+        </form>
+        <form class="signout" method="post" action='/signout'>
+          <input type="submit" name="signout" value="Sign Out">
         </form>
       </div>
       <div class="canvas">
@@ -39,5 +47,8 @@
 
       <script type="text/javascript" src="/js/jquery.min.js"></script>
       <script type="text/javascript" src="/js/business-logic.js"></script>
+      <script type="text/javascript">
+
+      </script>
     </body>
 </html>
