remove sign out button

--- a/views/paint_control.erb
+++ b/views/paint_control.erb
@@ -31,9 +31,9 @@
           </select>
           <span class="checkbox"><input type="checkbox" name="magical" value="magical"> Magical</span>
         </form>
-        <form class="signout" method="post" action='/signout'>
+<!--         <form class="signout" method="post" action='/signout'>
           <input type="submit" name="signout" value="Sign Out">
-        </form>
+        </form> -->
       </div>
       <div class="canvas">
         <%= yield %>
